# theyworkforyou

./: .codeclimate.yml  .coveralls.yml  .dockerignore  .gitignore  .gitmodules  .php-cs-fixer.dist.php  .scrutinizer.yml  .travis.yml  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.dev  INSTALL.md  INSTALL.txt  LICENSE.md  LICENSE.txt  README  README.md  README.txt  TTD  Vagrantfile  add-php-instrumentation.py  browser.py  build-docs.sh  codeception.yml  common.py  composer.json  composer.phar  conf  create-rootfs.py  docker-compose.dev.yml  docker-compose.yml  etc-apache2-ports-conf  etc-apache2-sites-available-twfy  etc-hosts.template  etc-network-interfaces.template  general-template  general.template  id_dsa.alice  id_dsa.alice.pub  (+30 more)
.devcontainer/: devcontainer.json  initializeCommand
classes/: ALERT.html  AlertView.php  COMMENT.html  COMMENTLIST.html  COMMENTREPORT.html  COMMENTREPORTLIST.html  Common.php  DEBATELIST.html  Data.php  Dissolution.php  Divisions.php  EditQueue.php  FacebookLogin.php  GLOSSARY.html  GLOSSARYLIST.html  Gaze.php  Gid.php  GlossaryEditQueue.php  HANSARDLIST.html  Hansard.php  Homepage.php  LMQLIST.html  LORDSDEBATELIST.html  MEMBER.html  Member.php  MemberException.php  MemberMultipleException.php  Memcache.php  MiniSurvey.php  MySociety.TheyWorkForYou.AlertView.Simple.html  MySociety.TheyWorkForYou.AlertView.Standard.html  MySociety.TheyWorkForYou.AlertView.html  MySociety.TheyWorkForYou.Common.html  MySociety.TheyWorkForYou.Data.html  MySociety.TheyWorkForYou.Db.Connection.html  MySociety.TheyWorkForYou.Db.Query.html  MySociety.TheyWorkForYou.Dissolution.html  MySociety.TheyWorkForYou.Divisions.html  MySociety.TheyWorkForYou.EditQueue.html  MySociety.TheyWorkForYou.FacebookLogin.html  (+100 more)
conf/: .gitignore  Vagrantfile.example  crontab-example  crontab.ugly  general-example  httpd.conf  httpd.docker  httpd.vagrant  logrotate-example  nginx.conf.example  packages  post-deploy.bash
db/: 0001-update-speaker_id-to-person_id.sql  0002-add-estimated_usage-to-api_key.sql  0003-add-moffice-id.sql  0003-move-names-to-separate-table.sql  0004-add-research-qual2-log.sql  0005-add-editorial-table.sql  0006-change-editorial-index.sql  0007-add-policy-vote-to-divisions.sql  0008-add-party-policy.sql  0009-drop-research-qual2-table.sql  0010-change-glossary-title-collation-utf8.sql  0011-add-topics-tables.sql  0011-change-future-table-to-utf8.sql  0012-add-totals-to-policy-divisions.sql  0013-add-image-to-topics.sql  0014-add-fb_id-to-users.sql  0015-add-api-subscription.sql  hansard.sql  (+23 more)
(+3496 files in other folders)
